--- a/composer.json
+++ b/composer.json
@@ -68,12 +68,12 @@
         "yiisoft/yii2": "self.version"
     },
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.1.0",
         "ext-mbstring": "*",
         "ext-ctype": "*",
         "lib-pcre": "*",
-        "yiisoft/yii2-composer": "~2.0.4",
-        "ezyang/htmlpurifier": "~4.6",
+        "yiisoft/yii2-composer": "~2.0.8",
+        "ezyang/htmlpurifier": "~4.11.0",
         "cebe/markdown": "~1.0.0 | ~1.1.0 | ~1.2.0",
         "bower-asset/jquery": "3.4.*@stable | 3.3.*@stable | 3.2.*@stable | 3.1.*@stable | 2.2.*@stable | 2.1.*@stable | 1.11.*@stable | 1.12.*@stable",
         "bower-asset/inputmask": "~3.2.2 | ~3.3.5",
@@ -81,10 +81,9 @@
         "bower-asset/yii2-pjax": "~2.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.34",
+        "phpunit/phpunit": "~5.7.27",
         "cebe/indent": "~1.0.2",
-        "friendsofphp/php-cs-fixer": "~2.2.3",
-        "johnkary/phpunit-speedtrap": "^1.0"
+        "friendsofphp/php-cs-fixer": "~2.15.3"
     },
     "repositories": [
         {
@@ -102,7 +101,7 @@
         }
     },
     "config": {
-        "platform": {"php": "5.4"}
+        "platform": {"php": "7.1"}
     },
     "bin": [
         "framework/yii"
