--- a/composer.json
+++ b/composer.json
@@ -81,8 +81,9 @@
         "bower-asset/yii2-pjax": "~2.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7.27",
+        "phpunit/phpunit": "~6.5.14",
         "cebe/indent": "~1.0.2",
+        "roave/security-advisories": "dev-master",
         "friendsofphp/php-cs-fixer": "~2.15.3"
     },
     "repositories": [
