--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,28 +8,28 @@
 		stopOnFailure="false"
 		printerClass="yiiunit\ResultPrinter">
 		<testsuites>
-			<testsuite name="Yii Test Suite">
+			<testsuite name="Zii Test Suite">
 				<directory>./tests</directory>
 			</testsuite>
 		</testsuites>
 		<filter>
             <whitelist>
                 <directory suffix=".php">framework/</directory>
+                <exclude>
+                    <file>framework/helpers/Json.php</file>
+                    <file>framework/helpers/StringHelper.php</file>
+                    <file>framework/helpers/VarDumper.php</file>
+                    <file>framework/helpers/Html.php</file>
+                    <file>framework/helpers/Inflector.php</file>
+                    <file>framework/helpers/FileHelper.php</file>
+                    <file>framework/helpers/ArrayHelper.php</file>
+                    <file>framework/helpers/Console.php</file>
+                    <file>framework/i18n/GettextFile.php</file>
+                    <file>framework/web/ResponseFormatterInterface.php</file>
+                    <directory suffix="Exception.php">framework/base</directory>
+                    <directory suffix=".php">framework/db/mssql</directory>
+                    <directory suffix=".php">framework/bootstrap</directory>
+                </exclude>
             </whitelist>
-			<blacklist>
-				<file>framework/helpers/Json.php</file>
-				<file>framework/helpers/StringHelper.php</file>
-				<file>framework/helpers/VarDumper.php</file>
-				<file>framework/helpers/Html.php</file>
-				<file>framework/helpers/Inflector.php</file>
-				<file>framework/helpers/FileHelper.php</file>
-				<file>framework/helpers/ArrayHelper.php</file>
-				<file>framework/helpers/Console.php</file>
-				<file>framework/i18n/GettextFile.php</file>
-				<file>framework/web/ResponseFormatterInterface.php</file>
-				<directory suffix="Exception.php">framework/base</directory>
-				<directory suffix=".php">framework/db/mssql</directory>
-				<directory suffix=".php">framework/bootstrap</directory>
-			</blacklist>
 		</filter>
 </phpunit>
