--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: ['5.4', '5.5', '5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        php: ['7.1', '7.2', '7.3', '7.4', '8.0']
 
     steps:
       - name: Generate french locale
@@ -93,9 +93,6 @@ jobs:
         env:
           PHPUNIT_EXCLUDE_GROUP: oci,wincache,xcache,zenddata,cubrid
         if: matrix.php == '7.4' || matrix.php == '7.3' || matrix.php == '7.2'
-      - name: PHP Unit tests for PHP 5.4 - 7.0
-        run: vendor/bin/phpunit --verbose --exclude-group $PHPUNIT_EXCLUDE_GROUP
-        if: matrix.php == '7.0' || matrix.php == '5.6' || matrix.php == '5.5' || matrix.php == '5.4'
       - name: Code coverage
         run: |
           wget https://scrutinizer-ci.com/ocular.phar
