--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://asset-packagist.org"
+            "url": "https://asset-packagist.cn"
         }
     ],
     "autoload": {
