--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,7 @@
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
         "phpunit/phpunit": "6.5.14",
-        "cebe/indent": "~1.0.2",
-        "johnkary/phpunit-speedtrap": "^1.0"
+        "cebe/indent": "~1.0.2"
     },
     "repositories": [
         {
