--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: ['7.1', '7.4', '8.0']
+        php: ['7.2', '7.4', '8.0']
 
     steps:
       - name: Generate french locale
@@ -71,7 +71,7 @@ jobs:
             else
                 printf "\033[31;1mpdo_sqlsrv not installed :-(\n"
             fi
-        if: matrix.php == '7.4' || matrix.php == '7.3' || matrix.php == '7.2'
+        if: matrix.php == '7.4' || matrix.php == '7.3'
       - name: Install Memcached
         uses: niden/actions-memcached@v7
       - name: Get composer cache directory
@@ -85,19 +85,19 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
       - name: Install dependencies
         run: composer update $DEFAULT_COMPOSER_FLAGS
-      - name: PHP Unit tests for PHP 7.1
+      - name: PHP Unit tests for PHP 7.2
         run: vendor/bin/phpunit --verbose --coverage-clover=coverage.clover --exclude-group oci,wincache,xcache,zenddata,cubrid
-        if: matrix.php == '7.1'
-      - name: PHP Unit tests for PHP 7.2 - 7.4
+        if: matrix.php == '7.2'
+      - name: PHP Unit tests for PHP 7.3 - 7.4
         run: vendor/bin/phpunit --verbose --exclude-group $PHPUNIT_EXCLUDE_GROUP
         env:
           PHPUNIT_EXCLUDE_GROUP: oci,wincache,xcache,zenddata,cubrid
-        if: matrix.php == '7.4' || matrix.php == '7.3' || matrix.php == '7.2'
+        if: matrix.php == '7.4' || matrix.php == '7.3'
       - name: Code coverage
         run: |
           wget https://scrutinizer-ci.com/ocular.phar
           php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-        if: matrix.php == '7.1'
+        if: matrix.php == '7.2'
         continue-on-error: true # if is fork
 
   npm:
@@ -110,7 +110,7 @@ jobs:
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 7.2
+          php-version: 7.4
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
