--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "yiisoft/yii2": "self.version"
     },
     "require": {
-        "php": ">=7.2.0",
+        "php": ">=7.3.0",
         "ext-mbstring": "*",
         "ext-ctype": "*",
         "lib-pcre": "*",
@@ -40,7 +40,7 @@
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
-        "phpunit/phpunit": "8.5.8",
+        "phpunit/phpunit": "^9.3",
         "cebe/indent": "~1.0.2"
     },
     "repositories": [
@@ -55,7 +55,7 @@
         }
     },
     "config": {
-        "platform": {"php": "7.2"}
+        "platform": {"php": "7.3"}
     },
     "bin": [
         "framework/yii"
