--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,9 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.xml]
+indent_size = 2
+
+[*.xml.dist]
+indent_size = 2
