--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<phpunit bootstrap="./tests/bootstrap.php"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         bootstrap="./tests/bootstrap.php"
          backupGlobals="true"
          colors="true"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
-         stopOnFailure="false">
+         stopOnFailure="false"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage>
+    <include>
+      <directory suffix=".php">framework/</directory>
+    </include>
+    <exclude>
+      <file>framework/helpers/Json.php</file>
+      <file>framework/helpers/StringHelper.php</file>
+      <file>framework/helpers/VarDumper.php</file>
+      <file>framework/helpers/Html.php</file>
+      <file>framework/helpers/Inflector.php</file>
+      <file>framework/helpers/FileHelper.php</file>
+      <file>framework/helpers/ArrayHelper.php</file>
+      <file>framework/helpers/Console.php</file>
+      <file>framework/i18n/GettextFile.php</file>
+      <file>framework/web/ResponseFormatterInterface.php</file>
+      <directory suffix="Exception.php">framework/base</directory>
+      <directory suffix=".php">framework/db/mssql</directory>
+      <directory suffix=".php">framework/bootstrap</directory>
+    </exclude>
+  </coverage>
   <testsuites>
     <testsuite name="Yii Test Suite">
       <directory>./tests</directory>
     </testsuite>
   </testsuites>
-  <filter>
-    <whitelist>
-      <directory suffix=".php">framework/</directory>
-      <exclude>
-        <file>framework/helpers/Json.php</file>
-        <file>framework/helpers/StringHelper.php</file>
-        <file>framework/helpers/VarDumper.php</file>
-        <file>framework/helpers/Html.php</file>
-        <file>framework/helpers/Inflector.php</file>
-        <file>framework/helpers/FileHelper.php</file>
-        <file>framework/helpers/ArrayHelper.php</file>
-        <file>framework/helpers/Console.php</file>
-        <file>framework/i18n/GettextFile.php</file>
-        <file>framework/web/ResponseFormatterInterface.php</file>
-        <directory suffix="Exception.php">framework/base</directory>
-        <directory suffix=".php">framework/db/mssql</directory>
-        <directory suffix=".php">framework/bootstrap</directory>
-      </exclude>
-    </whitelist>
-  </filter>
 </phpunit>
