--- a/framework/composer.json
+++ b/framework/composer.json
@@ -1,71 +1,30 @@
 {
-    "name": "yiisoft/yii2",
-    "description": "Yii PHP Framework Version 2",
+    "name": "ziiframework/zii",
+    "description": "zii framework",
     "keywords": [
-        "yii2",
+        "zii",
         "framework"
     ],
-    "homepage": "http://www.yiiframework.com/",
+    "homepage": "https://github.com/ziiframework/zii/",
     "type": "library",
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Qiang Xue",
-            "email": "qiang.xue@gmail.com",
-            "homepage": "http://www.yiiframework.com/",
+            "name": "Yii Team",
+            "email": "team@yiiframework.com",
+            "homepage": "http://www.yiiframework.com/team",
             "role": "Founder and project lead"
-        },
-        {
-            "name": "Alexander Makarov",
-            "email": "sam@rmcreative.ru",
-            "homepage": "http://rmcreative.ru/",
-            "role": "Core framework development"
-        },
-        {
-            "name": "Maurizio Domba",
-            "homepage": "http://mdomba.info/",
-            "role": "Core framework development"
-        },
-        {
-            "name": "Carsten Brandt",
-            "email": "mail@cebe.cc",
-            "homepage": "http://cebe.cc/",
-            "role": "Core framework development"
-        },
-        {
-            "name": "Timur Ruziev",
-            "email": "resurtm@gmail.com",
-            "homepage": "http://resurtm.com/",
-            "role": "Core framework development"
-        },
-        {
-            "name": "Paul Klimov",
-            "email": "klimov.paul@gmail.com",
-            "role": "Core framework development"
-        },
-        {
-            "name": "Dmitry Naumenko",
-            "email": "d.naumenko.a@gmail.com",
-            "role": "Core framework development"
-        },
-        {
-            "name": "Boudewijn Vahrmeijer",
-            "email": "info@dynasource.eu",
-            "homepage": "http://dynasource.eu",
-            "role": "Core framework development"
         }
     ],
     "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
+        "issues": "https://github.com/ziiframework/zii/issues?state=open",
+        "source": "https://github.com/ziiframework/zii"
     },
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.3.0",
         "ext-mbstring": "*",
         "ext-ctype": "*",
+        "ext-json": "*",
         "lib-pcre": "*",
         "yiisoft/yii2-composer": "~2.0.4",
         "ezyang/htmlpurifier": "~4.6",
@@ -83,7 +42,7 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "3.0.x-dev"
         }
     }
 }
