--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "platform": {"php": "7.3"}
     },
     "bin": [
-        "framework/yii"
+        "src/yii"
     ],
     "extra": {
         "branch-alias": {
