--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -7,6 +7,7 @@ name: ci-pgsql
 jobs:
   tests:
     name: PHP ${{ matrix.php-version }}-pgsql-${{ matrix.pgsql-version }}
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     env:
       extensions: curl, intl, pdo, pdo_pgsql
       key: cache-v1
