--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,11 @@
             "/tests/"
         ]
     },
+    "autoload-dev": {
+        "files": [
+            "tests/bootstrap.php"
+        ]
+    },
     "config": {
         "platform": {"php": "7.3"}
     },
