--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
         "phpunit/phpunit": "^8.5",
-        "cebe/indent": "~1.0.2"
+        "cebe/indent": "^1.0"
     },
     "repositories": [
         {
