--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,7 @@
         "ext-json": "*",
         "ziiframework/composer": "~3.1.1",
         "ezyang/htmlpurifier": "~4.13.0",
-        "cebe/markdown": "~1.0.0 | ~1.1.0 | ~1.2.0",
-        "bower-asset/jquery": "3.5.*@stable | 3.4.*@stable | 3.3.*@stable | 3.2.*@stable | 3.1.*@stable | 2.2.*@stable | 2.1.*@stable | 1.11.*@stable | 1.12.*@stable",
-        "bower-asset/inputmask": "~3.2.2 | ~3.3.5",
-        "bower-asset/punycode": "1.3.*",
-        "bower-asset/yii2-pjax": "~2.0.1"
+        "cebe/markdown": "~1.0.0 | ~1.1.0 | ~1.2.0"
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
