--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,13 +34,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: ['7.3', '7.4', '8.0']
+        php: ['7.4', '8.0']
 
     steps:
       - name: Generate french locale
         run: sudo locale-gen fr_FR.UTF-8
+
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -48,28 +50,13 @@ jobs:
           tools: pecl
           extensions: apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite
           ini-values: date.timezone='UTC', session.save_path="${{ runner.temp }}"
+
       - name: Install Memcached
         uses: niden/actions-memcached@v7
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
+
       - name: Install dependencies
         run: composer update $DEFAULT_COMPOSER_FLAGS
-      - name: PHP Unit tests for PHP 7.3
-        run: vendor/bin/phpunit --verbose --coverage-clover=coverage.clover --colors=always
-        if: matrix.php == '7.3'
-      - name: PHP Unit tests for PHP 7.4
+
+      - name: PHPUnit
         run: vendor/bin/phpunit --verbose --colors=always
         if: matrix.php == '7.4'
-      - name: Code coverage
-        run: |
-          wget https://scrutinizer-ci.com/ocular.phar
-          php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-        if: matrix.php == '7.3'
-        continue-on-error: true # if is fork
