--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         {
             "name": "Yii Team",
             "email": "team@yiiframework.com",
-            "homepage": "http://www.yiiframework.com/team",
+            "homepage": "https://www.yiiframework.com/team",
             "role": "Founder and project lead"
         }
     ],
