--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "ext-ctype": "*",
         "lib-pcre": "*",
         "ext-json": "*",
+        "ext-dom": "*",
         "ziiframework/composer": "~3.2.1",
         "ezyang/htmlpurifier": "^4.13",
         "cebe/markdown": "^1.0"
