--- a/.github/workflows/ci-mssql.yml
+++ b/.github/workflows/ci-mssql.yml
@@ -24,13 +24,7 @@ jobs:
         include:
           - php: '7.4'
             extensions: pdo, pdo_sqlsrv
-            mssql: 'server:2017-latest'
-          - php: '7.4'
-            extensions: pdo, pdo_sqlsrv
             mssql: 'server:2019-latest'
-          - php: '8.0'
-            extensions: pdo, pdo_sqlsrv
-            mssql: 'server:2017-latest'
           - php: '8.0'
             extensions: pdo, pdo_sqlsrv
             mssql: 'server:2019-latest'
@@ -82,7 +76,7 @@ jobs:
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: Install dependencies with composer php 8.0
-        if: matrix.php == '8.0'
+        if: matrix.php >= '8.0'
         run: composer update --ignore-platform-reqs --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: PHP Unit tests for PHP 7.4
