--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -31,8 +31,7 @@ jobs:
           - "8.1"
 
         pgsql-version:
-          - "12"
-          - "13"
+          - "14"
 
     services:
       postgres:
@@ -43,7 +42,7 @@ jobs:
           POSTGRES_DB: yiitest
         ports:
           - 5432:5432
-        options: --name=postgres --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --name=postgres --health-cmd=pg_isready --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout
