--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -12,17 +12,16 @@ on:
 
 jobs:
   tests:
-    name: PHP ${{ matrix.php-version }}-pgsql-${{ matrix.pgsql-version }}
+    name: PHP ${{ matrix.php-version }} pgsql ${{ matrix.pgsql-version }} on ${{ matrix.os-version }}
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     env:
       extensions: curl, intl, pdo, pdo_pgsql
-      key: cache-v1
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os-version }}
 
     strategy:
       matrix:
-        os:
+        os-version:
           - ubuntu-latest
 
         php-version:
@@ -48,21 +47,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.4.0
 
-      - name: Setup cache environment
-        id: cache-env
-        uses: shivammathur/cache-extensions@v1
-        with:
-          php-version: ${{ matrix.php-version }}
-          extensions: ${{ env.extensions }}
-          key: ${{ env.key }}
-
-      - name: Cache extensions
-        uses: actions/cache@v1.2.0
-        with:
-          path: ${{ steps.cache-env.outputs.dir }}
-          key: ${{ steps.cache-env.outputs.key }}
-          restore-keys: ${{ steps.cache-env.outputs.key }}
-
       - name: Install PHP with extensions
         uses: shivammathur/setup-php@v2
         with:
@@ -71,20 +55,11 @@ jobs:
           ini-values: date.timezone='UTC'
           coverage: pcov
 
-      - name: Determine composer cache directory
-        if: matrix.os == 'ubuntu-latest'
-        run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
+      - name: Install dependencies
+        run: |
+          rm -rf vendor/
+          rm -f composer.lock
+          composer install --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
-      - name: Cache dependencies installed with composer
-        uses: actions/cache@v1.2.0
-        with:
-          path: ${{ env.COMPOSER_CACHE_DIR }}
-          key: php${{ matrix.php-version }}-composer-${{ matrix.dependencies }}-${{ hashFiles('**/composer.json') }}
-          restore-keys: |
-            php${{ matrix.php-version }}-composer-${{ matrix.dependencies }}-
-
-      - name: Install dependencies with composer
-        run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
-
-      - name: Run pgsql tests with phpunit
+      - name: PHPUnit
         run: vendor/bin/phpunit --group pgsql --colors=always
