--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,12 @@ on:
       - main
 
 env:
-  DEFAULT_COMPOSER_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
+  COMPOSER_INSTALL_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
+  BASE_PHP_EXTENSIONS: "apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite"
 
 jobs:
   phpunit:
-    name: PHP ${{ matrix.php-version }} MySQL ${{ matrix.mysql-version }} on ${{ matrix.os-version }}
+    name: PHP ${{ matrix.php-version }} mysql ${{ matrix.mysql-version }} on ${{ matrix.os-version }}
     if: "!contains(github.event.head_commit.message, 'skip ci')"
 
     runs-on: ${{ matrix.os-version }}
@@ -59,7 +60,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           tools: pecl
-          extensions: apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite
+          extensions: $BASE_PHP_EXTENSIONS
           ini-values: date.timezone='UTC', session.save_path="${{ runner.temp }}"
 
       - name: Install Memcached
@@ -69,7 +70,7 @@ jobs:
         run: |
           rm -rf vendor/
           rm -f composer.lock
-          composer install $DEFAULT_COMPOSER_FLAGS
+          composer install $COMPOSER_INSTALL_FLAGS
 
       - name: PHPUnit
         run: vendor/bin/phpunit --verbose --colors=always
