--- a/.github/workflows/ci-mssql.yml
+++ b/.github/workflows/ci-mssql.yml
@@ -10,9 +10,13 @@ on:
       - master
       - main
 
+env:
+  COMPOSER_INSTALL_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
+  BASE_PHP_EXTENSIONS: "apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite"
+
 jobs:
   tests:
-    name: PHP ${{ matrix.php-version }}-mssql-${{ matrix.mssql-version }}
+    name: PHP ${{ matrix.php-version }} mssql ${{ matrix.mssql-version }} on ${{ matrix.os-version }}
 
     runs-on: ${{ matrix.os-version }}
 
@@ -52,14 +56,14 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           tools: pecl
-          extensions: apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite, pdo_sqlsrv
+          extensions: $BASE_PHP_EXTENSIONS, pdo_sqlsrv
           ini-values: date.timezone='UTC'
 
       - name: Install dependencies
         run: |
           rm -rf vendor/
           rm -f composer.lock
-          composer install --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
+          composer install $COMPOSER_INSTALL_FLAGS
 
       - name: PHPUnit
         run: vendor/bin/phpunit --group mssql --colors=always
