--- a/.github/workflows/ci-mysql.yml
+++ b/.github/workflows/ci-mysql.yml
@@ -10,6 +10,10 @@ on:
       - master
       - main
 
+env:
+  COMPOSER_INSTALL_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
+  BASE_PHP_EXTENSIONS: "apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite"
+
 jobs:
   tests:
     name: PHP ${{ matrix.php-version }} mysql ${{ matrix.mysql-version }} on ${{ matrix.os-version }}
@@ -49,14 +53,15 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite
+          tools: pecl
+          extensions: $BASE_PHP_EXTENSIONS
           ini-values: date.timezone='UTC'
 
       - name: Install dependencies
         run: |
           rm -rf vendor/
           rm -f composer.lock
-          composer install --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
+          composer install $COMPOSER_INSTALL_FLAGS
 
       - name: PHPUnit
         run: vendor/bin/phpunit --group mysql --colors=always
