--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -10,12 +10,14 @@ on:
       - master
       - main
 
+env:
+  COMPOSER_INSTALL_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
+  BASE_PHP_EXTENSIONS: "apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite"
+
 jobs:
   tests:
     name: PHP ${{ matrix.php-version }} pgsql ${{ matrix.pgsql-version }} on ${{ matrix.os-version }}
     if: "!contains(github.event.head_commit.message, 'skip ci')"
-    env:
-      extensions: curl, intl, pdo, pdo_pgsql
 
     runs-on: ${{ matrix.os-version }}
 
@@ -51,15 +53,15 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: ${{ env.extensions }}
+          tools: pecl
+          extensions: $BASE_PHP_EXTENSIONS, pdo_pgsql
           ini-values: date.timezone='UTC'
-          coverage: pcov
 
       - name: Install dependencies
         run: |
           rm -rf vendor/
           rm -f composer.lock
-          composer install --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
+          composer install $COMPOSER_INSTALL_FLAGS
 
       - name: PHPUnit
         run: vendor/bin/phpunit --group pgsql --colors=always
