--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,4 +72,5 @@ jobs:
           composer install $COMPOSER_INSTALL_FLAGS
 
       - name: PHPUnit
+        if: matrix.php-version <= '8.0'
         run: vendor/bin/phpunit --verbose --colors=always
