--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,11 @@
             "/tests/"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "yiiunit\\": "tests/"
+        }
+    },
     "config": {
         "platform": {
             "php": "7.4"
