--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,15 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4.0",
-        "ext-mbstring": "*",
         "ext-ctype": "*",
-        "lib-pcre": "*",
-        "ext-json": "*",
         "ext-dom": "*",
-        "ziiframework/composer": "~3.3.0",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "lib-pcre": "*",
+        "cebe/markdown": "^1.0",
         "ezyang/htmlpurifier": "^4.13",
-        "cebe/markdown": "^1.0"
+        "symfony/polyfill-php80": "^1.23",
+        "ziiframework/composer": "~3.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
