--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,10 @@
             "php": "7.4"
         },
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "ziiframework/composer": true
+        }
     },
     "scripts": {
         "redo-install": [
