--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "cebe/markdown": "^1.0",
         "ezyang/htmlpurifier": "^4.13",
         "symfony/polyfill-php80": "^1.23",
-        "ziiframework/composer": "~3.4.0"
+        "ziiframework/composer": ">=3.5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
