--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       fail-fast: false
       matrix:
         os-version: [ubuntu-latest]
-        php-version: ['7.4', '8.0']
+        php-version: ['7.4', '8.0', '8.1']
         mysql-version: ['5.7', '8.0']
 
     services:
