--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "nette/php-generator": "^3.6",
         "cebe/indent": "^1.0"
     },
     "autoload": {
