--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,10 @@
         "ziiframework/composer": ">=3.5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "cebe/indent": "^1.0",
         "nette/php-generator": "^3.6",
-        "cebe/indent": "^1.0"
+        "phpunit/phpunit": "^9.5",
+        "symfony/var-dumper": "^5.4"
     },
     "autoload": {
         "psr-4": {
