--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "cebe/indent": "^1.0",
         "nette/php-generator": "^3.6",
         "phpunit/phpunit": "^9.5",
-        "symfony/var-dumper": "^5.4"
+        "symfony/var-dumper": "^5.4||^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -56,9 +56,6 @@
         }
     },
     "config": {
-        "platform": {
-            "php": "7.4"
-        },
         "optimize-autoloader": true,
         "sort-packages": true,
         "allow-plugins": {
