--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=7.4.5",
         "ext-ctype": "*",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-pdo": "*",
         "lib-pcre": "*",
-        "charescape/php-functions": "1.2.1",
+        "charescape/php-functions": "^1.2.1",
         "cebe/markdown": "^1.2",
         "ezyang/htmlpurifier": "^4.16",
         "symfony/polyfill-php80": "^1.26",
