--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
         "ext-mbstring": "*",
         "ext-pdo": "*",
         "lib-pcre": "*",
-        "charescape/php-functions": "^1.2.1",
+        "charescape/php-functions": "^1.3.0",
         "cebe/markdown": "^1.2",
         "ezyang/htmlpurifier": "^4.16",
         "symfony/polyfill-php80": "^1.26",
         "symfony/polyfill-php81": "^1.26",
-        "ziiframework/composer": ">=3.6.0"
+        "ziiframework/composer": "^3.6.1"
     },
     "require-dev": {
         "cebe/indent": "^1.0",
