--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,35 @@
 /.php-cs-fixer.cache
 
 /composer.lock
+
+
+
+/tests/**/*.yml
+/tests/**/cubrid/*
+/tests/**/oci/*
+/tests/**/Dockerfile
+/tests/**/*.md
+/tests/**/*.sh
+/tests/**/*.xml
+/tests/**/*.sql
+/tests/compatibility.php
+/tests/.*
+/tests/framework/caching/WinCacheTest.php
+/tests/framework/caching/XCacheTest.php
+/tests/framework/caching/ZendDataCacheTest.php
+/tests/framework/ChangeLogTest.php
+/tests/framework/base/BCObject.php
+
+/src/**/*.md
+/src/**/*.yml
+/src/**/*.json
+/src/**/.*
+/src/base/Object.php
+/src/caching/WinCache.php
+/src/caching/XCache.php
+/src/caching/ZendDataCache.php
+/src/**/*oci.sql
+/src/**/*cubrid.sql
+/src/**/oci/*
+/src/**/cubrid/*
+
