--- a/.github/workflows/ci-mysql.yml
+++ b/.github/workflows/ci-mysql.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         os-version:
-          - ubuntu-latest
+          - ubuntu-20.04
 
         php-version:
           - "8.0"
