--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os-version: [ubuntu-latest]
+        os-version: [ubuntu-20.04]
         php-version: ['8.0', '8.1']
         mysql-version: ['5.7', '8.0']
 
