--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   phpstan:
-    name: PHP ${{ matrix.php-version }} on ubuntu-latest
+    name: PHP ${{ matrix.php-version }} on ubuntu-20.04
     if: "contains(github.event.head_commit.message, 'phpstan ci')"
 
     strategy:
@@ -21,7 +21,7 @@ jobs:
       matrix:
         php-version: ['8.0', '8.1']
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v3
