--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os-version: [ubuntu-20.04]
-        php-version: ['8.0', '8.1']
+        php-version: ['8.0', '8.1', '8.2']
         mysql-version: ['5.7', '8.0']
 
     services:
