--- a/.github/workflows/ci-mysql2.yml
+++ b/.github/workflows/ci-mysql2.yml
@@ -10,9 +10,6 @@ on:
       - master
       - main
 
-env:
-  COMPOSER_INSTALL_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
-
 jobs:
   tests:
     name: Ubuntu-20.04 PHP-8.0 MySQL-8.0
@@ -23,15 +20,19 @@ jobs:
     container: charescape/web:6.2.0
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+
+      - run: sudo ln -s /usr/local/php/bin/php /usr/local/bin/php
+
+      - run: php -v
+
+      - run: composer self-update -vvv
 
       - name: Install dependencies
         run: |
           rm -rf vendor/
           rm -f composer.lock
-          composer self-update -vvv
-          composer install $COMPOSER_INSTALL_FLAGS
+          composer install --no-interaction
 
       - name: PHPUnit
         run: vendor/bin/phpunit --group mysql --colors=always
